--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "wa-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Ana WhatsApp Bot",
+  "main": "ai-reply-groq.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ai-reply-groq.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "groq-sdk": "^0.37.0",
     "pino": "^10.1.0",
-    "qrcode-terminal": "^0.12.0"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
