--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "groq-sdk": "^0.37.0",
     "pino": "^10.1.0",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "qrcode": "^1.5.4"
   }
 }
